--- a/popup.html
+++ b/popup.html
@@ -4,11 +4,12 @@
 		<title>Save My Eyes</title>
 	</head>
 	<body>
-		<div id="title"> We should be able to change the time interval
+		<div>Default alert is every 20 minutes with a length of 20 seconds</div>
+		<div id="inputs">
+			Alert every (Minutes): <input id="usetime" type="text" name="usetime" placeholder="Use Time"><br />
+			Alert length (Seconds): <input id="waittime" type="text" name="waittime" placeholder="Wait Time">
 		</div>
-		<div id="info">Some sort of info page</div>
-		<div>Some sort of statistics page would be nice as well</div>
-		<div>Something else</div>
+		<button id="update">Update</button>
 	</body>
 	<style type="text/css">
 		body {
